@@ -2,19 +2,21 @@ name             = Alien-Build-Git
 author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
-copyright_year   = 2017
+copyright_year   = 2017,2018,2019,2022
 version          = 0.08
 
 [@Author::Plicease]
-:version      = 2.54
+:version      = 2.69
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 test2_v0      = 1
 irc           = irc://irc.perl.org/#native
-workflow      = linux
-workflow      = windows
-workflow      = macos
 github_user   = PerlAlien
+
+workflow = static
+workflow = linux
+workflow = windows
+workflow = macos
 
 preamble = | require './lib/Alien/git.pm';
 preamble = | unless(Alien::git->exe)
